syntax = "proto3";
package movie;

message MovieItem {
  int32 id = 1;
  string title = 2;
  string genre = 3;
}

message MovieRequest {
}

message MovieResponse {
  repeated MovieItem movies = 1;
}

service Movie {
  rpc GetMovies (MovieRequest) returns (MovieResponse);
}